[metadata]
name = pytw
author = Justin M. LaPre
author_email = justin@lapre.com
summary = Python Time Warp
license = BSD 3-clause
license = BSD 3-clause
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    pytw
